# qronos

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bzlmod  maven_install.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
.github/workflows/: build.yml
backend/akka/: BUILD.bazel  DockerMonitor.scala  main.scala
backend/cpp/: BUILD.bazel  README.md  main.cpp  main.js  request.cpp  request.h
backend/python/: .env  .env.test  BUILD.bazel  README.md  gazelle_python.yaml  main.py  requirements.in  requirements.txt  requirements_darwin.txt  requirements_linux.txt
backend/python/qronos/: BUILD.bazel  app.py  db.py  settings.py
backend/python/qronos/routers/: default.py  history.py  runner.py  runtime.py  schedule.py  script.py  settings.py  user.py
backend/python/runtime/: BUILD.bazel  bootstrap.mts  deno.py
backend/python/scheduler/: BUILD.bazel
backend/python/test/: conftest.py  test_main.py
backend/rust/: BUILD.bazel  Cargo.toml  README.md  rust-toolchain.toml
backend/rust/src/: main.js  main.old.rs  main.rs  test.rs
bazel/: python.bzl
frontend/: .env  .env.local  .env.production  BUILD.bazel  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: dateutils.ts
frontend/src/components/core/: alert.tsx  cron.tsx  qronos_editor.tsx  qronos_monaco_editor.tsx
frontend/src/components/layouts/: footer.tsx  header.tsx  sidenav.tsx
frontend/src/components/pages/: browse_scripts.tsx  create.tsx  create_scripts.tsx  edit_script.tsx  history.tsx  home.tsx  system_settings.tsx  system_status.tsx
frontend/src/components/services/: Client.ts
frontend/src/types/: qronos.ts
scripts/: BUILD.bazel  check.sh
src/: App.tsx
