load("@npm//:defs.bzl", "npm_link_all_packages")
load("@npm//frontend:vite/package_json.bzl", vite = "bin")

npm_link_all_packages()

vite.vite(
    name = "prod_build",
    srcs = glob(["src/**/*"]) + glob(["public/**/*"]) + glob([
        "*.ts",
        "*.js",
        "*.json",
        "*.html",
    ]) + [
        ":node_modules",
        "//:node_modules",
    ],
    args = [
        "build",
        "--mode",
        "production",
    ],
    chdir = package_name(),
    out_dirs = ["dist"],
)
