load("@aspect_rules_lint//format:defs.bzl", "format_multirun", "format_test")
load("@npm//:prettier/package_json.bzl", prettier = "bin")

package(default_visibility = ["//visibility:public"])

prettier.prettier_binary(
    name = "prettier",
    # Allow the binary to be run outside bazel
    env = {"BAZEL_BINDIR": "."},
    # default log level is "log" which spams on success
    # https://prettier.io/docs/en/cli.html#--log-level
    # NB: prettier 2 names this loglevel, in prettier 3 it's renamed log-level, see
    # https://prettier.io/blog/2023/07/05/3.0.0.html#cli-1
    fixed_args = ["--log-level=warn"],
)

format_multirun(
    name = "format",
    c = "@llvm_toolchain_llvm//:bin/clang-format",
    cc = "@llvm_toolchain_llvm//:bin/clang-format",
    css = ":prettier",
    graphql = ":prettier",
    html = ":prettier",
    javascript = ":prettier",
    markdown = ":prettier",
    sql = ":prettier",
    starlark = "@buildifier_prebuilt//:buildifier",
)

format_test(
    name = "format_test",
    c = "@llvm_toolchain_llvm//:bin/clang-format",
    cc = "@llvm_toolchain_llvm//:bin/clang-format",
    css = ":prettier",
    graphql = ":prettier",
    html = ":prettier",
    javascript = ":prettier",
    markdown = ":prettier",
    no_sandbox = True,
    sql = ":prettier",
    starlark = "@buildifier_prebuilt//:buildifier",
    workspace = "//:.bazelversion",
)
