cc_binary(
    name = "main",
    srcs = [
        "main.cpp",
    ],
    data = [
        "lib.mjs",
        "main.js",
    ],
    deps = [
        ":runtime",
        "//third_party:v8",
        "@v8pp",
    ],
)

cc_library(
    name = "runtime",
    srcs = [
        "request.cpp",
    ],
    hdrs = [
        "request.h",
    ],
    deps = [
        "//third_party:v8",
        "@v8pp",
    ],
)
