cc_binary(
    name = "main",
    srcs = [
        "main.cpp",
    ],
    data = [
        "lib.mjs",
        "main.js",
    ],
    target_compatible_with = select({
        "@platforms//os:macos": ["@platforms//cpu:arm64"],
        # Experiencing weird linking bugs with the prebuild v8 lib we're downloading.
        # Will have to look into later when we need this.
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    deps = [
        # ":runtime",
        "//third_party:v8",
        "@v8pp",
    ],
)

# cc_library(
#     name = "runtime",
#     srcs = [
#         "request.cpp",
#     ],
#     hdrs = [
#         "request.h",
#     ],
#     deps = [
#         "//third_party:v8",
#         "@v8pp",
#     ],
# )
