load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_doc")

package(default_visibility = ["//visibility:public"])

rust_binary(
    name = "qronos_runtime",
    srcs = ["src/main.rs"],
    deps = [
        "@crates//:deno_core",
        "@crates//:deno_ast",
        "@crates//:tokio",
        "@crates//:anyhow",
    ],
)

alias(
    name = "rust",
    actual = ":qronos_runtime",
)
