load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_doc")

package(default_visibility = ["//visibility:public"])

rust_binary(
    name = "qronos_runtime",
    srcs = ["src/main.rs"],
    deps = [
        "@crates//:anyhow",
        "@crates//:deno_ast",
        "@crates//:deno_core",
        "@crates//:tokio",
    ],
)

alias(
    name = "rust",
    actual = ":qronos_runtime",
)
