load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_doc")

package(default_visibility = ["//visibility:public"])

rust_binary(
    name = "qronos_runtime",
    srcs = ["src/main.rs"],
    data = glob(["src/*.js"]),
    deps = [
        "@crates//:anyhow",
        "@crates//:clap",
        "@crates//:deno",
        "@crates//:deno_ast",
        "@crates//:deno_core",
        "@crates//:deno_npm",
        "@crates//:deno_runtime",
        "@crates//:deno_terminal",
        "@crates//:tokio",
    ],
)

# rust_doc(
#     name = "qronos_runtime_doc",
#     crate = ":qronos_runtime",
# )

alias(
    name = "rust",
    actual = ":qronos_runtime",
)
