[package]
name = "qronos_runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
deno_ast = { version = "0.35.3", features = ["transpiling"] }
deno_core = "0.290.0"
tokio = "1.38.0"
