[package]
name = "qronos_runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
# wgpu-core = "0.20"
deno_ast = { version = "0.39.2", features = ["transpiling"] }
deno_core = "0.293.0"
# deno_runtime = "0.167.0"
deno_runtime = { git = "https://github.com/Saasassin/deno.git", rev = "3338373b05d5935168758c029d069c77734eca13"}
deno = { git = "https://github.com/Saasassin/deno.git", rev = "3338373b05d5935168758c029d069c77734eca13"}
# deno_ast = { git = "https://github.com/Saasassin/deno.git", branch = "v1.45.0-patches" }
# deno_core = { git = "https://github.com/Saasassin/deno.git", branch = "v1.45.0-patches" }
# deno_runtime = { git = "https://github.com/Saasassin/deno.git", branch = "v1.45.0-patches" }
tokio = "1.38.0"
v8 = "0.97.1"