load("@aspect_rules_py//py:defs.bzl", "py_library")

py_library(
    name = "qronos",
    srcs = glob([
        "**/*.py",
    ]),
    imports = [".."],
    visibility = ["//backend/python:__subpackages__"],
    deps = [
        "//backend/python/runtime",
        "@pip//pydantic",
        "@pip//pydantic_settings",
        "@pip//sqlalchemy",
        "@pip//sqlmodel",
    ],
)
